<resources>
    <string name="app_name" translatable="false">SofaWeatherApp</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">My Cities</string>
    <string name="title_settings">Settings</string>
    <string name="search_hint">Search Cities</string>
    <string name="location_key" translatable="false">location_name</string>
    <string name="favorite" translatable="false">favorite</string>
    <string name="unfavorite" translatable="false">unfavorite</string>
    <string name="edit" translatable="false">edit</string>
    <string name="done" translatable="false">done</string>

    <string name="no_location_mess">No locations found</string>
    <string name="img_missing_err" translatable="false">Weather feature imageView must contain drawable</string>
    <string name="err_search_small">Minimum num of chars: 3</string>

    <string name="today_label">Today</string>
    <string name="next_days_label">Next 7 days</string>

    <string name="temp_title" translatable="false">MIN / MAX</string>
    <string name="wind_title">WIND</string>
    <string name="humidity_title">HUMIDITY</string>
    <string name="pressure_title">PRESSURE</string>
    <string name="visibility_title">VISIBILITY</string>
    <string name="accuracy_title">ACCURACY</string>
    <string name="view_more">VIEW MORE</string>

    <string name="temp_unit" translatable="false">°</string>
    <string name="temp_unit_F" translatable="false">F</string>
    <string name="temp_value" translatable="false">%1$s%2$s</string>
    <string name="temp_min_max_value" translatable="false">%1$s%2$s / %3$s%4$s</string>
    <string name="wind_value" translatable="false">%1$s %2$s (%3$s)</string>
    <string name="wind_unit" translatable="false">km/h</string>
    <string name="wind_unit_mph" translatable="false">mph</string>
    <string name="humidity_value" translatable="false">%1$s %2$s</string>
    <string name="humidity_unit" translatable="false">%</string>
    <string name="pressure_value" translatable="false">%1$s %2$s</string>
    <string name="pressure_unit" translatable="false">hPa</string>
    <string name="pressure_unit_imp" translatable="false">psi</string>
    <string name="visibility_value" translatable="false">%1$s %2$s</string>
    <string name="visibility_unit" translatable="false">km</string>
    <string name="visibility_unit_miles" translatable="false">mi</string>
    <string name="accuracy_value" translatable="false">%1$s %2$s</string>
    <string name="accuracy_unit" translatable="false">%</string>

    <string name="settings">Settings</string>
    <string name="my_cities">My Cities</string>

    <string name="unit_type_text">Choose type of unit</string>
    <string name="language">Language</string>
    <string name="city">City</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="clear_my_cities_list">CLEAR MY CITIES LIST</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="clear_my_cities_dialog_title">Clear my cities list?</string>
    <string name="clear_my_cities_dialog_mess">If you clear my cities list, my cities screen will be empty.</string>
    <string name="clear_my_cities_after_message">My cities list is clear.</string>
    <string-array name="languages">
        <item>English</item>
        <item>Croatian</item>
    </string-array>

</resources>