<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <example.app.sofaweatherapp.view.customviews.WeatherFeature
        android:id="@+id/featureTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:imgRes="@drawable/icons_android_ic_thermostat"
        app:layout_constraintEnd_toStartOf="@+id/featureWind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:name="@string/temp_title" />

    <example.app.sofaweatherapp.view.customviews.WeatherFeature
        android:id="@+id/featureWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:imgRes="@drawable/icons_android_ic_wind"
        app:layout_constraintEnd_toStartOf="@+id/featureHumidty"
        app:layout_constraintStart_toEndOf="@id/featureTemp"
        app:layout_constraintTop_toTopOf="parent"
        app:name="@string/wind_title" />

    <example.app.sofaweatherapp.view.customviews.WeatherFeature
        android:id="@+id/featureHumidty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:imgRes="@drawable/icons_android_ic_humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/featureWind"
        app:layout_constraintTop_toTopOf="parent"
        app:name="@string/humidity_title" />

    <example.app.sofaweatherapp.view.customviews.WeatherFeature
        android:id="@+id/featurePressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:imgRes="@drawable/icons_android_ic_pressure"
        app:layout_constraintEnd_toStartOf="@+id/featureVisibility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/featureTemp"
        app:name="@string/pressure_title" />

    <example.app.sofaweatherapp.view.customviews.WeatherFeature
        android:id="@+id/featureVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:imgRes="@drawable/icons_android_ic_visibility"
        app:layout_constraintEnd_toStartOf="@+id/featureAccuracy"
        app:layout_constraintStart_toEndOf="@id/featurePressure"
        app:layout_constraintTop_toBottomOf="@+id/featureWind"
        app:name="@string/visibility_title" />

    <example.app.sofaweatherapp.view.customviews.WeatherFeature
        android:id="@+id/featureAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:imgRes="@drawable/icons_android_ic_accuracy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/featureVisibility"
        app:layout_constraintTop_toBottomOf="@+id/featureHumidty"
        app:name="@string/accuracy_title" />

</androidx.constraintlayout.widget.ConstraintLayout>