<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surface_surface_1"
    cardview:cardCornerRadius="12dp"
    cardview:cardElevation="4dp"
    cardview:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            style="@style/HeadlineMediumNLv1Left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="@string/clear_my_cities_dialog_title" />

        <TextView
            android:id="@+id/dialog_description"
            style="@style/BodyMediumNLv1Left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/clear_my_cities_dialog_mess" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/surface_surface_1"
                android:shadowColor="@color/surface_surface_1"
                android:text="@string/cancel"
                android:textColor="@color/color_secondary"
                cardview:strokeColor="@color/surface_surface_1"
                cardview:strokeWidth="0dp" />

            <Button
                android:id="@+id/dialog_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_secondary"
                android:text="@string/clear" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>