<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings"
        app:titleTextColor="@color/on_color" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <example.app.sofaweatherapp.view.customviews.TextLayoutAndDropdownMenu
            android:id="@+id/languages_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <example.app.sofaweatherapp.view.customviews.TextLayoutAndDropdownMenu
            android:id="@+id/cities_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:hint="@string/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/languages_dropdown" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:backgroundTint="@color/surface_surface_2"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/cities_dropdown">

            <TextView
                style="@style/AssistiveNLv2Left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:text="@string/unit_type_text" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin_big"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/metric"
                    style="@style/BodyMediumNLv1Left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/horizontal_padding"
                    android:text="@string/metric" />

                <RadioButton
                    android:id="@+id/imperial"
                    style="@style/BodyMediumNLv1Left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/horizontal_padding"
                    android:text="@string/imperial" />

            </RadioGroup>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>